# aios3

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Makefile  README.md  activate.sh  build-docs.sh  compile_requirements.sh  data.json  doc.sh  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  search.html  setup.py  sitemap.xml  upload.sh  verup.sh
.github/workflows/: DOCS.YML  ci.yaml  ci.yml  docs.yml  pip_publish.yml  static.yml
docs/: README.md  file.md  mkdocs.yml  stream_iter.md  version.md
docs/src/en/: reference.md
docstrings/: index.html
docstrings/file/: index.html
docstrings/stream_iter/: index.html
docstrings/version/: index.html
htmlcov/: class_index.html  d_28c0da1aee526582___about___py.html  d_28c0da1aee526582_file_py.html  d_28c0da1aee526582_stream_iter_py.html  function_index.html  index.html  status.json  z_28c0da1aee526582___about___py.html  z_28c0da1aee526582_file_py.html  z_28c0da1aee526582_stream_iter_py.html
reference/: index.html
ru/: 404.html  objects.inv  sitemap.xml
ru/reference/: index.html
ru/search/: search_index.json
scripts/: build-docs.sh  compile_requirements.sh  docstrings.sh  include_pyproject_requirements.py  verup.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/file/: index.html
site/stream_iter/: index.html
site/version/: index.html
src/aios3/: __init__.py  file.py  stream_iter.py  version.py
tests/: conftest.py  test_aios3_file.py
