[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "aios3"
description = "Wrapper for aiobotocore to simplify reading of large files"
readme = "README.md"
keywords = [ "asyncio", "boto3", "botocore", "s3", "aws",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
requires-python = ">=3.7"
dependencies = [ "aiobotocore==2.7.0", "# via -r requirements.in", "aiohttp==3.8.6", "# via aiobotocore", "aioitertools==0.11.0", "# via aiobotocore", "aiosignal==1.3.1", "# via aiohttp", "async-timeout==4.0.3", "# via aiohttp", "attrs==23.1.0", "# via aiohttp", "botocore==1.31.64", "# via aiobotocore", "charset-normalizer==3.3.2", "# via aiohttp", "frozenlist==1.4.0", "# via", "#   aiohttp", "#   aiosignal", "idna==3.4", "# via yarl", "jmespath==1.0.1", "# via botocore", "multidict==6.0.4", "# via", "#   aiohttp", "#   yarl", "python-dateutil==2.8.2", "# via botocore", "six==1.16.0", "# via python-dateutil", "urllib3==2.0.7", "# via botocore", "wrapt==1.16.0", "# via aiobotocore", "yarl==1.9.2", "# via aiohttp",]
dynamic = [ "version",]
[[project.authors]]
name = "Andrey Sorokin"
email = "andrey@sorokin.engineer"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://andgineer.github.io/aios3/"
documentation = "https://andgineer.github.io/aios3/"

[tool.hatch.version]
source = "file"
path = "src/aios3/__about__.py"
attr = "__version__"

[tool.hatch.metadata.hooks.version]
enabled = true
