[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "aios3"
description = "Wrapper for aiobotocore to simplify reading of large files"
readme = "README.md"
keywords = [ "asyncio", "boto3", "botocore", "s3", "aws",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
requires-python = ">=3.7"
dependencies = [ "aiobotocore==2.7.0", "aiohttp==3.8.6", "aioitertools==0.11.0", "aiosignal==1.3.1", "async-timeout==4.0.3", "attrs==23.1.0", "botocore==1.31.64", "charset-normalizer==3.3.2", "frozenlist==1.4.0", "idna==3.4", "jmespath==1.0.1", "multidict==6.0.4", "python-dateutil==2.8.2", "six==1.16.0", "urllib3==2.0.7", "wrapt==1.16.0", "yarl==1.9.2",]
dynamic = [ "version",]
[[project.authors]]
name = "Andrey Sorokin"
email = "andrey@sorokin.engineer"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://andgineer.github.io/aios3/"
documentation = "https://andgineer.github.io/aios3/"

[tool.setuptools]
packages = "find:"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.manifest]
include = [ "README.md", "LICENSE.txt",]

[tool.hatch.version]
path = "src/aios3/__about__.py"
