[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "aios3"
description = "Wrapper for aiobotocore to simplify reading of large files"
readme = "README.md"
keywords = [ "asyncio", "boto3", "botocore", "s3", "aws",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
requires-python = ">=3.10"
dependencies = [ "aiobotocore", "multidict>=6.0.5",]
dynamic = [ "version",]
[[project.authors]]
name = "Andrey Sorokin"
email = "andrey@sorokin.engineer"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://andgineer.github.io/aios3/"
documentation = "https://andgineer.github.io/aios3/"

[tool.setuptools]
packages = "find:"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.manifest]
include = [ "README.md", "LICENSE.txt",]

[tool.hatch.version]
path = "src/aios3/__about__.py"

[tool.uv]
dev-dependencies = [
    "mkdocstrings[python]",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocs-awesome-pages-plugin",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "coveralls",
    "pre-commit",
    "mypy",
    "pylint",
    "hatchling>=1.27.0",
]

[tool.uv.sources]
aios3 = { workspace = true }
